# snip20-airdrop-contract-example

./: .gitignore  Cargo.toml  Developing.md  Makefile  README.md
schema/: handle_answer.json  handle_msg.json  query_answer.json  query_msg.json
src/: batch.rs  contract.rs  lib.rs  msg.rs  state.rs  transaction_history.rs
src/storage/: README.md  claim.rs  de.rs  expiration.rs  helpers.rs  int_key.rs  keys.rs  map.rs  mod.rs  path.rs
